feat: frontend improvements

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lush-admin",
+  "name": "tangi-guru",
   "version": "1.1.0",
-  "title": "Admin dashboard of Lush",
+  "title": "Admin dashboard of TangiGuru",
   "description": "",
   "author": {
     "name": "Gimnath",
