--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": "bin/createNodejsApp.js",
   "main": "src/index.js",
   "repository": "",
-  "author": "Gimnath",
+  "author": "Manisha",
   "license": "MIT",
   "engines": {
     "node": "14.16.1"
